[package]
name = "rustendo64"
version = "0.1.0"
authors = ["ferris <jake@fusetools.com>"]
license = "MIT/Apache-2.0"

[dependencies]
byteorder = "0.4.2"
minifb = "0.4.0"
nom = "1.1.0"
num = "0.1.30"
enum_primitive = "0.1.0"

[dependencies.clap]
version = "2.0.1"
features = [ "suggestions", "color" ]

[dependencies.rustyline]
git = "http://github.com/birkenfeld/rustyline"
