[package]
name = "rustendo64"
version = "0.1.0"
authors = ["ferris <jake@fusetools.com>", "Georg Brandl <georg@python.org>"]
license = "MIT/Apache-2.0"

[profile.dev]
opt-level = 1
debug = true
codegen-units = 2

[profile.release]
#lto = true

[dependencies]
chan-signal = "0.1.5"
crossbeam = "0.2.8"

[dependencies.clap]
version = "2.0.1"
features = [ "suggestions", "color" ]

[dependencies.rustendo64-r4k]
path = "src/r4k"

[dependencies.rustendo64-bus]
path = "src/bus"

[dependencies.rustendo64-cpu]
path = "src/cpu"

[dependencies.rustendo64-rsp]
path = "src/rsp"

[dependencies.rustendo64-rdp]
path = "src/rdp"

[dependencies.rustendo64-util]
path = "src/util"

[dependencies.rustendo64-ui]
path = "src/ui"

[dependencies.rustendo64-ui-minifb]
path = "src/ui/minifb"
