[package]
name = "rustendo64-bus"
version = "0.1.0"
authors = ["Georg Brandl <georg@python.org>"]
license = "MIT/Apache-2.0"

[lib]
path = "lib.rs"

[profile.dev]
opt-level = 1
debug = true
codegen-units = 2

[dependencies]
byteorder = "0.4.2"

[dependencies.rustendo64-ui]
path = "../ui"

[dependencies.rustendo64-util]
path = "../util"

[dependencies.rustendo64-rdp]
path = "../rdp"
