[package]
name = "rustendo64-rsp"
version = "0.1.0"
authors = ["Georg Brandl <georg@python.org>"]
license = "MIT/Apache-2.0"

[lib]
path = "lib.rs"

[profile.dev]
opt-level = 1
debug = true
codegen-units = 2

[dependencies]
byteorder = "0.4.2"
ansi_term = "0.7.0"
simd = {"git" = "https://github.com/huonw/simd"}

[dependencies.rustendo64-r4k]
path = "../r4k"

[dependencies.rustendo64-bus]
path = "../bus"

[dependencies.rustendo64-util]
path = "../util"
